--- a/css/styles.css
+++ b/css/styles.css
@@ -2,20 +2,39 @@
     --primary-text-color: #212121
     --secondary-text-color: #757575
     --accent-color: #2196F3 
+    --primary-white: #FFFFFF 
 }
 
 
 body {
     color: #212121;
-}
+    font-family: Roboto, sans-serif;
+    }
+
+/*        Шапка      */
 
 .header-logo,
 .footer-logo {
     color: #2196F3;
+    font-family: Raleway, sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+    text-decoration: none;
 }
 
 .hl-second {
     color: #212121;
+}
+
+.page-header .link, .page-header .contact {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.1;
+    letter-spacing: 0.02em;
+    text-decoration: none;
 }
 
 .site-nav a:hover,
@@ -23,9 +42,14 @@ body {
     color: #2196F3;
 }
 
-.site-nav a{
+.site-nav .link.current {
+    color: #2196F3;
+}
+
+.site-nav .link {
     color: #212121;
 }
+
 .contact:hover,
 .contact:focus {
     color: #2196F3;
@@ -35,10 +59,7 @@ body {
     color: #757575;
 }
 
-.footer-contact {
-    color: rgba(255, 255, 255, 0.6);
-}
-/* Герой */
+/*       Герой       */
 .hero {
     background-color: #2F303A;
 }
@@ -46,31 +67,133 @@ body {
 .hero-title,
 .footer-address {
     color: #FFFFFF;
+    text-decoration: none;
 }
+
+.hero-title {
+    font-style: normal;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.4;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+}
+
 
 .team {
     background-color: #F5F4FA;
 }
 
+
 .button {
     background-color: #2196F3;
     color: #FFFFFF;
     border-color: transparent;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.9;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    }
+
+
+.advantages p {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.7;
+    letter-spacing: 0.03em;
 }
+
 
 .text {
       color: #757575;
   }
+
+
 
 .footer, 
 .hero {
       background-color: #2F303A;
   }
 
+
   .fl-second {
       color: #FFFFFF
   }
 
+
 ul{
     list-style: none;
+}
+
+
+h2 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.1;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}
+
+
+h3 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.2;
+    text-align: center;
+    letter-spacing: 0.03em;
+}
+
+h4 {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.2;
+    text-align: center;
+    letter-spacing: 0.03em;
+}
+
+.team p {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.2;
+    text-align: center;
+    letter-spacing: 0.03em;
+}
+
+.footer-address {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.7;
+    letter-spacing: 0.03em;
+}
+
+.footer-contact {
+    color: rgba(255, 255, 255, 0.6);
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.7x;
+    letter-spacing: 0.03em;
+}
+
+.work-button {
+    color: #212121;
+    background-color:#F5F4FA;
+    border-color: transparent;
+    }
+
+.work-button:hover,
+.work-button:focus {
+    background-color: #2196F3;
+    color: #FFFFFF;
 }
